fix: fix classes for footer

--- a/source/index.html
+++ b/source/index.html
@@ -42,9 +42,9 @@
     <main class="page__main">
       <h1 class="visually-hidden">Городок Седона</h1>
 
-      <div class="page__preview preview">
+      <div class="page-preview">
         <h2 class="visually-hidden">О Седоне</h2>
-        <img class="preview__image--welcome" src="./img/logo-welcome.svg" width="282" height="214"
+        <img class="page-preview__image page-preview--welcome" src="./img/logo-welcome.svg" width="282" height="214"
           alt="Добро пожаловать в Седону.">
       </div>
 
@@ -114,11 +114,11 @@
       </section>
     </main>
 
-    <footer class="page__footer footer">
+    <footer class="page-footer">
       <h2 class="visually-hidden">Контакты</h2>
-      <a class="footer__tag" href="https://twitter.com/hashtag/visitsedona">#visitSEDONA</a>
+      <a class="page-footer__tag" href="https://twitter.com/hashtag/visitsedona">#visitSEDONA</a>
 
-      <div class="footer__social social">
+      <div class="page-footer__social social">
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
@@ -138,7 +138,7 @@
         </ul>
       </div>
 
-      <div class="footer__copyright copyright">
+      <div class="page-footer__copyright copyright">
         <span class="copyright__text">Разработано</span>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
           <span class="visually-hidden">HTML Academy</span>
