--- a/source/form.html
+++ b/source/form.html
@@ -44,9 +44,9 @@
     <main class="page__main">
       <h1 class="visually-hidden">Отзывы о Седоне</h1>
 
-      <div class="page__preview preview">
+      <div class="page-preview">
         <h2 class="visually-hidden">Городок Седона</h2>
-        <img class="preview__image" src="./img/logo-sedona.svg" width="229" height="39" alt="Логотип Седоны.">
+        <img class="page-preview__image" src="./img/logo-sedona.svg" width="229" height="39" alt="Логотип Седоны.">
       </div>
 
       <section class="section-content">
@@ -149,11 +149,11 @@
       </form>
     </main>
 
-    <footer class="page__footer footer">
+    <footer class="page-footer">
       <h2 class="visually-hidden">Контакты</h2>
-      <a class="footer__tag" href="https://twitter.com/hashtag/visitsedona">#visitSEDONA</a>
+      <a class="page-footer__tag" href="https://twitter.com/hashtag/visitsedona">#visitSEDONA</a>
 
-      <div class="footer__social social">
+      <div class="page-footer__social social">
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
@@ -173,7 +173,7 @@
         </ul>
       </div>
 
-      <div class="footer__copyright copyright">
+      <div class="page-footer__copyright copyright">
         <span class="copyright__text">Разработано</span>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
           <span class="visually-hidden">HTML Academy</span>
