--- a/source/index.html
+++ b/source/index.html
@@ -9,9 +9,9 @@
 
 <body class="page__body">
   <div class="page__container">
-    <header class="page__header">
-      <a class="page__logo">
-        <img class="page__logo-image" src="./img/logo.svg" width="195" height="96" alt="Городок Седона.">
+    <header class="page-header">
+      <a class="page-header__logo">
+        <img class="page-header__logo-image" src="./img/logo.svg" width="195" height="96" alt="Городок Седона.">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
