--- a/source/form.html
+++ b/source/form.html
@@ -7,11 +7,11 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body class="page__body">
-  <div class="page__container">
-    <header class="page__header">
-      <a class="page__logo">
-        <img class="page__logo-image" src="./img/logo.svg" width="195" height="96" alt="Городок Седона.">
+<body class="page-body">
+  <div class="page-container">
+    <header class="page-header">
+      <a class="page-header__logo">
+        <img class="page-header__logo-image" src="./img/logo.svg" width="195" height="96" alt="Городок Седона.">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
@@ -42,7 +42,7 @@
       </nav>
     </header>
 
-    <main class="page__main">
+    <main class="page-main">
       <h1 class="visually-hidden">Отзывы о Седоне</h1>
 
       <div class="page-preview">
@@ -154,7 +154,7 @@
       <h2 class="visually-hidden">Контакты</h2>
       <a class="page-footer__tag" href="https://twitter.com/hashtag/visitsedona">#visitSEDONA</a>
 
-      <div class="page-footer__social social">
+      <div class="social">
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
@@ -174,7 +174,7 @@
         </ul>
       </div>
 
-      <div class="page-footer__copyright copyright">
+      <div class="copyright">
         <span class="copyright__text">Разработано</span>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
           <span class="visually-hidden">HTML Academy</span>
