--- a/source/index.html
+++ b/source/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body class="page__body">
-  <div class="page__container">
+<body class="page-body">
+  <div class="page-container">
     <header class="page-header">
       <a class="page-header__logo">
         <img class="page-header__logo-image" src="./img/logo.svg" width="195" height="96" alt="Городок Седона.">
@@ -40,12 +40,12 @@
       </nav>
     </header>
 
-    <main class="page__main">
+    <main class="page-main">
       <h1 class="visually-hidden">Городок Седона</h1>
 
       <div class="page-preview">
         <h2 class="visually-hidden">О Седоне</h2>
-        <img class="page-preview__image page-preview--welcome" src="./img/logo-welcome.svg" width="282" height="214"
+        <img class="page-preview__image--welcome" src="./img/logo-welcome.svg" width="282" height="214"
           alt="Добро пожаловать в Седону.">
       </div>
 
@@ -119,7 +119,7 @@
       <h2 class="visually-hidden">Контакты</h2>
       <a class="page-footer__tag" href="https://twitter.com/hashtag/visitsedona">#visitSEDONA</a>
 
-      <div class="page-footer__social social">
+      <div class="social">
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
@@ -139,7 +139,7 @@
         </ul>
       </div>
 
-      <div class="page-footer__copyright copyright">
+      <div class="copyright">
         <span class="copyright__text">Разработано</span>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
           <span class="visually-hidden">HTML Academy</span>
