--- a/source/index.html
+++ b/source/index.html
@@ -86,17 +86,17 @@
               осмелитесь, конечно</p>
             <img class="advantages__image" src="./img/advantages-2.jpg" width="320" height="260" alt="Мост в Седоне.">
           </li>
-          <li class="advantages__item">
+          <li class="advantages__item advantages__item--tonality">
             <h3 class="advantages__title">Небольшая площадь</h3>
             <span class="advantages__number">— №3 —</span>
             <p class="advantages__description">Все интересные места находятся очень близко</p>
           </li>
-          <li class="advantages__item">
+          <li class="advantages__item advantages__item--tonality">
             <h3 class="advantages__title">Красивая дорога</h3>
             <span class="advantages__number">— №4 —</span>
             <p class="advantages__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
-          <li class="advantages__item">
+          <li class="advantages__item advantages__item--tonality">
             <h3 class="advantages__title">Мало туристов</h3>
             <span class="advantages__number">— №5 —</span>
             <p class="advantages__description">Большинство едет в Гранд Каньон и толпится там</p>
