feat: add background colors in index, add variable for colors

--- a/source/index.html
+++ b/source/index.html
@@ -57,15 +57,17 @@
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
         <ol class="advantages__list">
-          <li class="advantages__item advantages__item--background">
+          <li class="advantages__item">
+            <div class="advantages__item--background">
             <h3 class="advantages__title advantages__title--accent">Настоящий городок</h3>
             <span class="advantages__number advantages__number--accent">— №1 —</span>
             <p class="advantages__description advantages__description-accent">Седона не аттракцион для туристов, там
               течет своя жизнь</p>
+            </div>
             <img class="advantages__image" src="./img/advantages-1.jpg" width="320" height="260"
               alt="Улица в городке Седона.">
-            <ul class="advantages__list advantages__list--background">
-              <li class="advantages__item advantages__item--house">
+            <ul class="advantages__list">
+              <li class="advantages__item advantages__item--house advantages__item--inner">
                 <h4 class="advantages__title">Жилье</h4>
                 <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
               </li>
@@ -79,11 +81,13 @@
               </li>
             </ul>
           </li>
-          <li class="advantages__item advantages__item--background">
+          <li class="advantages__item">
+            <div class="advantages__item--background">
             <h3 class="advantages__title advantages__title--accent">Там есть мост дьявола</h3>
             <span class="advantages__number advantages__number--accent">— №2 —</span>
             <p class="advantages__description advantages__description--accent">Да, по нему можно пройти! Если вы
               осмелитесь, конечно</p>
+            </div>
             <img class="advantages__image" src="./img/advantages-2.jpg" width="320" height="260" alt="Мост в Седоне.">
           </li>
           <li class="advantages__item advantages__item--tonality">
