fix: tag taxtarea in form

--- a/source/form.html
+++ b/source/form.html
@@ -139,9 +139,8 @@
 
         <fieldset class="review-form__emotions">
           <legend class="review-form__title">Опишите свои эмоции:</legend>
-          <label class="visually-hidden"> Эмоции
-            <input class="control-input" type="text" placeholder="Опишите подробно все свои восторги">
-          </label>
+          <label class="visually-hidden" for="emotion">Эмоции</label>
+          <textarea class="control-input" id="emotion" rows="4" cols="20" type="text">Опишите подробно все свои восторги</textarea>
         </fieldset>
 
         <button class="button" type="submit">Отправить отзыв</button>
