feat: add styles for fonts for advantages in index, fix: classes for advantages in index

--- a/source/index.html
+++ b/source/index.html
@@ -60,8 +60,8 @@
           <li class="advantages__item">
             <div class="advantages__item--background">
             <h3 class="advantages__title advantages__title--accent">Настоящий городок</h3>
-            <span class="advantages__number advantages__number--accent">— №1 —</span>
-            <p class="advantages__description advantages__description-accent">Седона не аттракцион для туристов, там
+            <span class="advantages__number advantages__number--accent advantages__number--accent-bold">— №1 —</span>
+            <p class="advantages__description advantages__description--accent">Седона не аттракцион для туристов, там
               течет своя жизнь</p>
             </div>
             <img class="advantages__image" src="./img/advantages-1.jpg" width="320" height="260"
