feat: add styles for fonts in button

--- a/source/index.html
+++ b/source/index.html
@@ -109,7 +109,7 @@
       </section>
 
       <section class="section-content">
-        <h2 class="section-content__title">Заинтересовались?</h2>
+        <h2 class="section-content__title section-content__title-accent">Заинтересовались?</h2>
         <p class="section-content__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения
           гостиниц
           в
