feat: add styles for fonts in catalog

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -50,7 +50,7 @@
 
       <section class="section-content">
         <h2 class="section-content__title">Фото и видео</h2>
-        <p class="section-content__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам
+        <p class="section-content__description section-description--accent">Не можете решиться на путешествие из-за курса? Фотографии помогут вам
           забыть о
           политике и экономике.</p>
       </section>
@@ -67,7 +67,7 @@
             </h3>
             <span class="catalog__author">Автор фото: Борис</span>
             <span class="catalog__card-like"></span>
-            <span class="catalog__number-like">1350</span>
+            <span class="catalog__amount-like">1350</span>
           </li>
 
           <li class="catalog__card">
@@ -80,7 +80,7 @@
             </h3>
             <span class="catalog__author">Автор фото: Сергей</span>
             <span class="catalog__card-like"></span>
-            <span class="catalog__number-like">143</span>
+            <span class="catalog__amount-like">143</span>
           </li>
 
           <li class="catalog__card">
@@ -92,7 +92,7 @@
             </h3>
             <span class="catalog__author">Автор фото: Петр</span>
             <span class="catalog__card-like"></span>
-            <span class="catalog__number-like">96</span>
+            <span class="catalog__amount-like">96</span>
           </li>
 
           <li class="catalog__card">
@@ -104,7 +104,7 @@
             </h3>
             <span class="catalog__author">Автор фото: Антон</span>
             <span class="catalog__card-like"></span>
-            <span class="catalog__number-like">254</span>
+            <span class="catalog__amount-like">254</span>
           </li>
         </ul>
       </section>
