feat: add paddings in index

--- a/source/index.html
+++ b/source/index.html
@@ -71,18 +71,18 @@
                 <h4 class="advantages__title">Жилье</h4>
                 <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
               </li>
-              <li class="advantages__item advantages__item--food">
+              <li class="advantages__item advantages__item--food advantages__item--inner">
                 <h4 class="advantages__title">Еда</h4>
                 <p class="advantages__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
               </li>
-              <li class="advantages__item advantages__item--souvenir">
+              <li class="advantages__item advantages__item--souvenir advantages__item--inner">
                 <h4 class="advantages__title">Сувениры</h4>
                 <p class="advantages__description">Не только китайского, но и местного производства!</p>
               </li>
             </ul>
           </li>
           <li class="advantages__item">
-            <div class="advantages__item--background">
+            <div class="advantages__item--background advanatges__item--padding">
             <h3 class="advantages__title advantages__title--accent">Там есть мост дьявола</h3>
             <span class="advantages__number advantages__number--accent">— №2 —</span>
             <p class="advantages__description advantages__description--accent">Да, по нему можно пройти! Если вы
@@ -108,7 +108,7 @@
         </ol>
       </section>
 
-      <section class="section-content">
+      <section class="section-content section-content--padding">
         <h2 class="section-content__title section-content__title-accent">Заинтересовались?</h2>
         <p class="section-content__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения
           гостиниц
