feat: add paddings in form

--- a/source/form.html
+++ b/source/form.html
@@ -50,7 +50,7 @@
         <img class="page-preview__image" src="./img/logo-sedona.svg" width="229" height="39" alt="Логотип Седоны.">
       </div>
 
-      <section class="section-content">
+      <section class="section-content section-content--indent">
         <h2 class="section-content__title">Оставьте свой отзыв</h2>
         <p class="section-content__description">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о
           посещенных вами
