--- a/source/index.html
+++ b/source/index.html
@@ -45,7 +45,7 @@
 
       <div class="page-preview">
         <h2 class="visually-hidden">О Седоне</h2>
-        <img class="page-preview__image--welcome" src="./img/logo-welcome.svg" width="282" height="214"
+        <img class="page-preview__image--welcome" src="./img/logo-welcome.svg"
           alt="Добро пожаловать в Седону.">
       </div>
 
