feat: add flex in form

--- a/source/form.html
+++ b/source/form.html
@@ -59,6 +59,7 @@
       </section>
 
       <form class="form" action="https://echo.htmlacademy.ru/" method="get">
+        <div class="form__wrapper">
         <fieldset class="form__name">
           <legend class="form__title">Представьтесь:</legend>
             <div class="form__item">
@@ -86,6 +87,7 @@
             <input class="form__field" id="email" type="email" name="useremail" placeholder="Введите e-mail">
           </div>
         </fieldset>
+        </div>
 
         <fieldset class="form__impression">
           <legend class="form__title">Ваше общее впечатление:</legend>
