fix paddinds and grids all pages for 320

--- a/source/index.html
+++ b/source/index.html
@@ -60,13 +60,13 @@
         <ol class="advantages__list">
           <li class="advantages__item">
               <div class="advantages__item--background">
-              <h3 class="advantages__title advantages__title--accent">Настоящий городок</h3>
-              <span class="advantages__number advantages__number--accent advantages__number--accent-bold">— №1 —</span>
-              <p class="advantages__description advantages__description--accent">Седона не аттракцион для туристов, там
-                течет своя жизнь</p>
-                <img class="advantages__image" src="./img/advantages-1.jpg" width="320" height="260"
-                alt="Улица в городке Седона.">
+                <h3 class="advantages__title advantages__title--accent">Настоящий городок</h3>
+                <span class="advantages__number advantages__number--accent advantages__number--accent-bold">— №1 —</span>
+                <p class="advantages__description advantages__description--accent">Седона не аттракцион для туристов, там
+                  течет своя жизнь</p>
               </div>
+              <img class="advantages__image" src="./img/advantages-1.jpg" width="320" height="260"
+              alt="Улица в городке Седона.">
             <ul class="advantages__list">
               <li class="advantages__item advantages__item--house advantages__item--inner">
                 <h4 class="advantages__title">Жилье</h4>
@@ -84,12 +84,11 @@
           </li>
           <li class="advantages__item">
             <div class="advantages__item--background advanatges__item--padding">
-            <h3 class="advantages__title advantages__title--accent">Там есть мост дьявола</h3>
-            <span class="advantages__number advantages__number--accent">— №2 —</span>
-            <p class="advantages__description advantages__description--accent">Да, по нему можно пройти! Если вы
-              осмелитесь, конечно</p>
-            <img class="advantages__image" src="./img/advantages-2.jpg" width="320" height="260" alt="Мост в Седоне.">
+              <h3 class="advantages__title advantages__title--accent">Там есть мост дьявола</h3>
+              <span class="advantages__number advantages__number--accent">— №2 —</span>
+              <p class="advantages__description advantages__description--accent">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
             </div>
+            <img class="advantages__image" src="./img/advantages-2.jpg" width="320" height="260" alt="Мост в Седоне.">
           </li>
           <li class="advantages__item advantages__item--tonality">
             <h3 class="advantages__title">Небольшая площадь</h3>
@@ -109,7 +108,7 @@
         </ol>
       </section>
 
-      <section class="section-content section-content--padding">
+      <section class="section-content">
         <h2 class="section-content__title section-content__title-accent">Заинтересовались?</h2>
         <p class="section-content__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения
           гостиниц
