--- a/source/form.html
+++ b/source/form.html
@@ -172,7 +172,7 @@
       </div>
     </footer>
 
-    <div class="modal modal-failure">
+    <div class="modal modal-failure modal-close">
       <section class="section-content modal__section-content">
         <h3 class="section-content__title">Что-то пошло не так!</h3>
         <p class="section-content__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить
@@ -181,7 +181,7 @@
       </section>
     </div>
 
-    <div class="modal modal-success">
+    <div class="modal modal-success modal-close">
       <section class="section-content modal__section-content">
         <h3 class="section-content__title">Ваш отзыв отправлен!</h3>
         <p class="section-content__description">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время
