fix: styles for advantages

--- a/source/index.html
+++ b/source/index.html
@@ -61,7 +61,7 @@
           <li class="advantages__item advantages__item--image">
               <div class="advantages__item-content">
                 <h3 class="advantages__title advantages__title--accent">Настоящий городок</h3>
-                <span class="advantages__number advantages__number--accent advantages__number--accent-bold">— №1 —</span>
+                <span class="advantages__number advantages__number--accent">— №1 —</span>
                 <p class="advantages__description advantages__description--accent">Седона не аттракцион для туристов, там
                   течет своя жизнь</p>
               </div>
@@ -83,12 +83,12 @@
             </ul>
           </li>
           <li class="advantages__item advantages__item--image">
+            <img class="advantages__image" src="./img/advantages-2.jpg" width="320" height="260" alt="Мост в Седоне.">
             <div class="advantages__item-content">
               <h3 class="advantages__title advantages__title--accent">Там есть мост дьявола</h3>
               <span class="advantages__number advantages__number--accent">— №2 —</span>
               <p class="advantages__description advantages__description--accent">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
             </div>
-            <img class="advantages__image" src="./img/advantages-2.jpg" width="320" height="260" alt="Мост в Седоне.">
           </li>
           <li class="advantages__item advantages__item--background">
             <h3 class="advantages__title">Небольшая площадь</h3>
