--- a/source/catalog.html
+++ b/source/catalog.html
@@ -58,7 +58,7 @@
 
       <section class="catalog">
         <ul class="catalog__list">
-          <li class="catalog__card catalog__card_1">
+          <li class="catalog__card">
             <a class="catalog__link" href="#">
               <img class="catalog__image" src="./img/catalog-1.jpg" width="280" height="280"
                 alt="Пейзаж дороги в Седону.">
@@ -71,7 +71,7 @@
             <span class="catalog__amount-like">1350</span>
           </li>
 
-          <li class="catalog__card catalog__card_2">
+          <li class="catalog__card">
             <a class="catalog__link" href="#">
               <img class="catalog__image" src="./img/catalog-2.jpg" width="280" height="280"
                 alt="Растения в окрестностях Седоны.">
@@ -84,7 +84,7 @@
             <span class="catalog__amount-like">143</span>
           </li>
 
-          <li class="catalog__card catalog__card_3">
+          <li class="catalog__card">
             <a class="catalog__link" href="#">
               <img class="catalog__image" src="./img/catalog-3.jpg" width="280" height="280" alt="Горный серпантин.">
             </a>
@@ -96,7 +96,7 @@
             <span class="catalog__amount-like">96</span>
           </li>
 
-          <li class="catalog__card catalog__card_4">
+          <li class="catalog__card">
             <a class="catalog__link" href="#">
               <img class="catalog__image" src="./img/catalog-4.jpg" width="280" height="280" alt="Вид на горы Седоны.">
             </a>
