fix formating code

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -58,8 +58,8 @@
 
       <section class="catalog">
         <ul class="catalog__list">
-          <li class="catalog__card">
-            <a class="catalog__link" href="#">
+          <li class="catalog__card catalog__card--full">
+            <a class="catalog__image-wrapper" href="#">
               <img class="catalog__image" src="./img/catalog-1.jpg" width="280" height="280"
                 alt="Пейзаж дороги в Седону.">
             </a>
