--- a/source/form.html
+++ b/source/form.html
@@ -60,6 +60,7 @@
 
       <form class="form" action="https://echo.htmlacademy.ru/" method="get">
         <div class="form__wrapper">
+        <div class="form__grid">
         <fieldset class="form__name">
           <legend class="form__title">Представьтесь:</legend>
             <div class="form__item">
@@ -137,6 +138,7 @@
 
         <button class="button" type="submit">Отправить отзыв</button>
         <span class="form__footnote">* — обязательные поля</span>
+      </div>
       </form>
     </main>
 
