fix: classes for catalog card

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -72,7 +72,7 @@
           </li>
 
           <li class="catalog__card">
-            <a class="catalog__link" href="#">
+            <a class="catalog__image-wrapper" href="#">
               <img class="catalog__image" src="./img/catalog-2.jpg" width="280" height="280"
                 alt="Растения в окрестностях Седоны.">
             </a>
@@ -85,7 +85,7 @@
           </li>
 
           <li class="catalog__card">
-            <a class="catalog__link" href="#">
+            <a class="catalog__image-wrapper" href="#">
               <img class="catalog__image" src="./img/catalog-3.jpg" width="280" height="280" alt="Горный серпантин.">
             </a>
             <h3 class="catalog__card-title">
@@ -97,7 +97,7 @@
           </li>
 
           <li class="catalog__card">
-            <a class="catalog__link" href="#">
+            <a class="catalog__image-wrapper" href="#">
               <img class="catalog__image" src="./img/catalog-4.jpg" width="280" height="280" alt="Вид на горы Седоны.">
             </a>
             <h3 class="catalog__card-title">
