--- a/source/catalog.html
+++ b/source/catalog.html
@@ -63,12 +63,14 @@
               <img class="catalog__image" src="./img/catalog-1.jpg" width="280" height="280"
                 alt="Пейзаж дороги в Седону.">
             </a>
-            <h3 class="catalog__card-title">
-              <a class="catalog__link" href="#">Неродные просторы</a>
-            </h3>
-            <span class="catalog__author">Автор фото: Борис</span>
-            <span class="catalog__card-like"></span>
-            <span class="catalog__amount-like">1350</span>
+            <div class="catalog__card-content">
+              <h3 class="catalog__card-title">
+                <a class="catalog__link" href="#">Неродные просторы</a>
+              </h3>
+              <span class="catalog__author">Автор фото: Борис</span>
+              <span class="catalog__card-like"></span>
+              <span class="catalog__amount-like">1350</span>
+            </div>
           </li>
 
           <li class="catalog__card">
@@ -76,36 +78,42 @@
               <img class="catalog__image" src="./img/catalog-2.jpg" width="280" height="280"
                 alt="Растения в окрестностях Седоны.">
             </a>
-            <h3 class="catalog__card-title">
-              <a class="catalog__link" href="#">Местная растительность</a>
-            </h3>
-            <span class="catalog__author">Автор фото: Сергей</span>
-            <span class="catalog__card-like"></span>
-            <span class="catalog__amount-like">143</span>
+            <div class="catalog__card-content">
+              <h3 class="catalog__card-title">
+                <a class="catalog__link" href="#">Местная растительность</a>
+              </h3>
+              <span class="catalog__author">Автор фото: Сергей</span>
+              <span class="catalog__card-like"></span>
+              <span class="catalog__amount-like">143</span>
+            </div>
           </li>
 
           <li class="catalog__card">
             <a class="catalog__image-wrapper" href="#">
               <img class="catalog__image" src="./img/catalog-3.jpg" width="280" height="280" alt="Горный серпантин.">
             </a>
-            <h3 class="catalog__card-title">
-              <a class="catalog__link" href="#">Дорога на север</a>
-            </h3>
-            <span class="catalog__author">Автор фото: Петр</span>
-            <span class="catalog__card-like"></span>
-            <span class="catalog__amount-like">96</span>
+            <div class="catalog__card-content">
+              <h3 class="catalog__card-title">
+                <a class="catalog__link" href="#">Дорога на север</a>
+              </h3>
+              <span class="catalog__author">Автор фото: Петр</span>
+              <span class="catalog__card-like"></span>
+              <span class="catalog__amount-like">96</span>
+            </div>
           </li>
 
           <li class="catalog__card">
             <a class="catalog__image-wrapper" href="#">
               <img class="catalog__image" src="./img/catalog-4.jpg" width="280" height="280" alt="Вид на горы Седоны.">
             </a>
-            <h3 class="catalog__card-title">
-              <a class="catalog__link" href="#">Мост Дьявола</a>
-            </h3>
-            <span class="catalog__author">Автор фото: Антон</span>
-            <span class="catalog__card-like"></span>
-            <span class="catalog__amount-like">254</span>
+            <div class="catalog__card-content">
+              <h3 class="catalog__card-title">
+                <a class="catalog__link" href="#">Мост Дьявола</a>
+              </h3>
+              <span class="catalog__author">Автор фото: Антон</span>
+              <span class="catalog__card-like"></span>
+              <span class="catalog__amount-like">254</span>
+            </div>
           </li>
         </ul>
       </section>
