--- a/4/form.html
+++ b/4/form.html
@@ -61,6 +61,7 @@
 
       <form class="form" action="https://echo.htmlacademy.ru/" method="get">
         <div class="form__wrapper">
+        <div class="form__grid">
         <fieldset class="form__name">
           <legend class="form__title">Представьтесь:</legend>
             <div class="form__item">
@@ -138,6 +139,7 @@
 
         <button class="button" type="submit">Отправить отзыв</button>
         <span class="form__footnote">* — обязательные поля</span>
+      </div>
       </form>
     </main>
 
@@ -173,7 +175,7 @@
       </div>
     </footer>
 
-    <div class="modal modal-failure">
+    <div class="modal modal-failure modal-close">
       <section class="section-content modal__section-content">
         <h3 class="section-content__title">Что-то пошло не так!</h3>
         <p class="section-content__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить
@@ -182,7 +184,7 @@
       </section>
     </div>
 
-    <div class="modal modal-success">
+    <div class="modal modal-success modal-close">
       <section class="section-content modal__section-content">
         <h3 class="section-content__title">Ваш отзыв отправлен!</h3>
         <p class="section-content__description">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время
