--- a/source/index.html
+++ b/source/index.html
@@ -12,13 +12,13 @@
   <div class="page-container">
     <header class="page-header">
         <a class="page-header__logo">
-          <img class="page-header__logo-image" src="./img/logo.svg" width="195" height="96" alt="Городок Седона.">
+          <img class="page-header__logo-image" src="./img/logo.svg" alt="Городок Седона.">
         </a>
-      <nav class="main-nav">
+      <nav class="main-nav main-nav--closed main-nav--opened main-nav--nojs">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <ul class="main-nav__list">
-          <li class="main-nav__item main-nav__item--current">
-            <a class="main-nav__link">
+          <li class="main-nav__item">
+            <a class="main-nav__link main-nav__link--current">
               Главная
             </a>
           </li>
@@ -151,6 +151,7 @@
       </div>
     </footer>
   </div>
+  <script src="script.js"></script>
 </body>
 
 </html>
