--- a/source/index.html
+++ b/source/index.html
@@ -115,7 +115,7 @@
           в
           Седоне</p>
         <a class="button" href="#">Найти гостиницу</a>
-        <div class="section-content__map"></div>
+        <iframe class="section-content__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1852064.2904232724!2d-112.87839087481719!3d34.96829151408422!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sby!4v1661284911889!5m2!1sru!2sby" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </section>
     </main>
 
