--- a/source/index.html
+++ b/source/index.html
@@ -68,15 +68,15 @@
               <img class="advantages__image" src="./img/advantages-1.jpg" width="320" height="260"
               alt="Улица в городке Седона.">
             <ul class="advantages__list">
-              <li class="advantages__item advantages__item--house">
+              <li class="advantages__item advantages__item--decor advantages__item--house">
                 <h4 class="advantages__title">Жилье</h4>
                 <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
               </li>
-              <li class="advantages__item advantages__item--food">
+              <li class="advantages__item advantages__item--decor advantages__item--food">
                 <h4 class="advantages__title">Еда</h4>
                 <p class="advantages__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
               </li>
-              <li class="advantages__item advantages__item--souvenir">
+              <li class="advantages__item advantages__item--decor advantages__item--souvenir">
                 <h4 class="advantages__title">Сувениры</h4>
                 <p class="advantages__description">Не только китайского, но и местного производства!</p>
               </li>
