--- a/source/index.html
+++ b/source/index.html
@@ -14,7 +14,7 @@
         <a class="page-header__logo">
           <img class="page-header__logo-image" src="./img/logo.svg" alt="Городок Седона.">
         </a>
-      <nav class="main-nav main-nav--closed main-nav--opened main-nav--nojs">
+      <nav class="main-nav main-nav--opened main-nav--nojs">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <ul class="main-nav__list">
           <li class="main-nav__item">
