--- a/5/form.html
+++ b/5/form.html
@@ -15,7 +15,7 @@
       <a class="page-header__logo">
         <img class="page-header__logo-image" src="./img/logo.svg" width="195" height="96" alt="Городок Седона.">
       </a>
-      <nav class="main-nav">
+      <nav class="main-nav main-nav--nojs">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list">
@@ -196,6 +196,6 @@
       </div>
     </div>
   </div>
+  <script src="./js/script.js"></script>
 </body>
-
 </html>
