--- a/source/index.html
+++ b/source/index.html
@@ -12,7 +12,6 @@
   <div class="page-container">
     <header class="page-header">
         <a class="page-header__logo">
-
           <img class="page-header__logo-image" src="./img/logo.svg" alt="Городок Седона.">
         </a>
       <nav class="main-nav main-nav--nojs">
@@ -47,8 +46,7 @@
 
       <div class="page-preview">
         <h2 class="visually-hidden">О Седоне</h2>
-        <img class="page-preview__image-welcome" src="./img/logo-welcome.svg"
-          alt="Добро пожаловать в Седону.">
+          <img class="page-preview__image-welcome" src="./img/logo-welcome.svg" width="282" height="214" alt="Добро пожаловать в Седону.">
       </div>
 
       <section class="section-content">
