--- a/source/index.html
+++ b/source/index.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Седона</title>
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="icon" href="favicon32.ico"> <!-- 32×32 -->
+  <link rel="icon" href="./img/favicons/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="./img/favicons/apple.png"> <!-- 180×180 -->
+  <link rel="manifest" href="manifest.webmanifest">
 </head>
 
 <body class="page-body">
@@ -64,9 +68,14 @@
                 <p class="advantages__description advantages__description--accent">Седона не аттракцион для туристов, там
                   течет своя жизнь</p>
               </div>
-              <img class="advantages__image" src="./img/advantages-1.jpg" width="320" height="260"
-              alt="Улица в городке Седона.">
-            <ul class="advantages__list">
+              <picture>
+                <!--
+                <source media="(min-width: 1200px)" srcset="./img/advantages-1-desktop.jpg 1x, ./img/advantages-1-desktop-2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="./img/advantages-1-tablet.jpg 1x, ./img/advantages-1-tablet-2x.jpg 2x">
+                -->
+                <img class="advantages__image" src="./img/advantages-1.jpg" width="320" height="260" srcset="./img/advantages-1-2x.jpg" alt="Улица в городке Седона.">
+              </picture>
+                <ul class="advantages__list">
               <li class="advantages__item advantages__item--decor advantages__item--house">
                 <h4 class="advantages__title">Жилье</h4>
                 <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
